[workspace]
edition = 2021
resolver = "2"
members = [
    "nrg-bg-etech-ds100",
    #"nrg-control",
    "nrg-core",
    "nrg-ds18b20",
    "nrg-hass",
    "nrg-keba-p30",
    #"nrg-keba-p30-rest",
    "nrg-mqtt",
    "nrg-sml",
    "nrg-sunspec",
    "nrg-timescaledb",
    "nrg-waveshare-modbus-rtu-relay-16ch",
]
