[package]
name = "nrg-bg-etech-ds100"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
nrg-hass = { path = "../nrg-hass" }
nrg-mqtt = { path = "../nrg-mqtt" }
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread", "time"] }
tokio-modbus = "0.15.0"
tokio-serial = "5.4.4"
toml = "0.8.8"
