[package]
name = "nrg-hass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.12.0"
rumqttc = "0.23.0"
serde = { version = "1.0.190", features = ["derive", "rc"] }
serde_json = "1.0.108"
