[package]
name = "nrg-keba-p30"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = "0.23.0"
nrg-hass = { path = "../nrg-hass" }
nrg-mqtt = { path = "../nrg-mqtt" }
serde = { version = "1.0.190", features = ["derive"] }
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread", "time", "sync"] }
tokio-modbus = "0.9.0"
toml = "0.8.6"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
dashmap = "5.5.3"
num-derive = "0.4.1"
num-traits = "0.2.17"
strum = { version = "0.25.0", features = ["derive"] }

[profile.release]
strip = true
