[package]
name = "nrg-sml"
version = "0.1.0"
edition = "2021"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nrg-hass = { path = "../nrg-hass" }
nrg-mqtt = { path = "../nrg-mqtt" }
serde = { version = "1.0.190", features = ["derive"] }
sml-rs = "0.4.0"
tokio = { version = "1.33.0", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "io-util",
] }
tokio-serial = "5.4.4"
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
