[package]
name = "nrg-timescaledb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.11"
nrg-mqtt = { path = "../nrg-mqtt" }
rumqttc = "0.23.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = { version = "0.7.10", features = ["with-time-0_3"] }
toml = "0.8.8"
tracing = "0.1.40"
users = { version = "0.11.0", default-features = false }
