[package]
name = "nrg-waveshare-modbus-rtu-relay-16ch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13.0"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread", "time"] }
tokio-modbus = "0.15.0"
tokio-serial = "5.4.4"
